--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <hr class="lineColor">
             </article>
         </div>
-        <div class="col-md-8 sections px-0">
+        <div class="col-md-8 mt-5 sections px-0">
             <div class="overlay">
               <div class="container">
               <div class="row  p-5">
